## 1.4.0 ### Added * Add support for module state * Add soft module shutdown by calling ```willDeinit``` of presenter using [OnDeallocateX](https://github.com/ladeiko/OnDeallocateX) * Support for custom parameter ```extended_configure:true``` * More asserts

--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -9,6 +9,7 @@ target 'Demo' do
   pod 'CacheTrackerConsumer/UIKit'
   pod 'TransparentProxyViewController'
   pod 'RamblerSegues'
+  pod 'OnDeallocateX'
 
   target 'DemoTests' do
     inherit! :complete
