## 1.5.0 ### Added * Add SwiftyViperService template

--- a/Demo/Makefile
+++ b/Demo/Makefile
@@ -26,11 +26,13 @@ $(TEST_PASSED): % : $(TEMPLATES) ./Sources/**/*.swift ./Sources/**/*.storyboard 
 	pod install
 	generamba gen $(@:.PASSED=) $(@:.PASSED=)
 	xcodebuild -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
+	xcodebuild test -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
 	rm -rf $@ $(PROJ_TEMPS)
 	xcodegen --spec project.yml
 	pod install
 	generamba gen $(@:.PASSED=) $(@:.PASSED=) --custom_parameters extended_configure:true
 	xcodebuild -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
+	xcodebuild test -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
 	touch $@
 	rm -rf $(PROJ_TEMPS)
 
