add redux service template; clean up; optimizations

--- a/Demo/Makefile
+++ b/Demo/Makefile
@@ -13,28 +13,25 @@ PROJ_TEMPS		:= Demo.xcodeproj Demo.xcworkspace Podfile.lock Pods Demo DemoTests
 
 .PHONY: test
 test: $(TEST_PASSED)
-	@echo "******************************"
 	@echo "TESTS PASSED!"
-	@echo "******************************"
 
 $(TEMPLATES): % : $(SPECS) Makefile $(TEMPLATE_SRC)
-	mkdir -p ./Templates && rsync -aq ./.. $@ --exclude Demo --exclude .git  --exclude .DS_Store && touch $@
+	@mkdir -p ./Templates && rsync -aq ./.. $@ --exclude Demo --exclude .git  --exclude .DS_Store && touch $@
 
 $(TEST_PASSED): % : $(TEMPLATES) ./Sources/**/*.swift ./Sources/**/*.storyboard $(CFG_FILES)
-	rm -rf $@ $(PROJ_TEMPS)
-	xcodegen --spec project.yml
-	pod install
-	generamba gen $(@:.PASSED=) $(@:.PASSED=)
-	xcodebuild -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
-	xcodebuild test -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
-	rm -rf $@ $(PROJ_TEMPS)
-	xcodegen --spec project.yml
-	pod install
-	generamba gen $(@:.PASSED=) $(@:.PASSED=) --custom_parameters extended_configure:true
-	xcodebuild -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
-	xcodebuild test -quiet -scheme Demo -workspace ./Demo.xcworkspace/ -destination 'platform=iOS Simulator,name=iPhone 8'
-	touch $@
-	rm -rf $(PROJ_TEMPS)
+	@./test_template.sh -t="$(@:.PASSED=)" -d="$(PROJ_TEMPS)" -o="$@"
+
+
+define SingleTest
+
+$(1:.PASSED=): ./$(1)
+	@echo "TESTS PASSED!"
+
+endef	
+
+$(foreach t, $(TEST_PASSED), \
+	$(eval $(call SingleTest,$(t))) \
+)
 
 .PHONY: clean
 clean:
