--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -5,7 +5,7 @@ target 'Demo' do
   pod 'ViperMcFlurryX'
   pod 'CacheTracker'
   pod 'CacheTracker/CoreData'
-  pod 'CacheTrackerConsumer'
+  pod 'CacheTrackerConsumer', '>= 1.5.0'
   pod 'CacheTrackerConsumer/UIKit'
   pod 'TransparentProxyViewController'
   pod 'RamblerSegues'
