--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -2,7 +2,7 @@ platform :ios, '10.0'
 use_frameworks!
 
 target 'Demo' do
-  pod 'ViperMcFlurryX'
+  pod 'ViperMcFlurryX', '>= 1.8.3'
   pod 'CacheTracker'
   pod 'CacheTracker/CoreData'
   pod 'CacheTrackerConsumer', '>= 1.5.0'
