--- a/Demo/Makefile
+++ b/Demo/Makefile
@@ -20,6 +20,7 @@ $(TEMPLATES): % : $(SPECS) Makefile $(TEMPLATE_SRC)
 
 $(TEST_PASSED): % : $(TEMPLATES) ./Sources/**/*.swift ./Sources/**/*.storyboard ./Models/*.xcdatamodeld $(CFG_FILES)
 	@./test_template.sh -t="$(@:.PASSED=)" -d="$(PROJ_TEMPS)" -o="$@"
+	@echo "$@ PASSED!"
 
 define SingleTest
 
