--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_install:
 - gem specific_install -l https://github.com/ladeiko/Generamba.git
 - brew tap yonaskolb/XcodeGen https://github.com/yonaskolb/XcodeGen.git
 - brew install XcodeGen
+- pod repo update
 os: osx
 osx_image: xcode9.4
 language: swift
