--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
-before_install:
-- gem install specific_install
-- gem specific_install -l https://github.com/ladeiko/Generamba.git
-- brew tap yonaskolb/XcodeGen https://github.com/yonaskolb/XcodeGen.git
-- travis_wait brew install XcodeGen
-- travis_wait pod repo update
-os: osx
-osx_image: xcode9.4
 language: swift
+osx_image: xcode9.4
+branches:
+  only:
+    - master
+before_install:
+  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+  - gem install specific_install
+  - gem specific_install -l https://github.com/ladeiko/Generamba.git
+  - brew tap yonaskolb/XcodeGen https://github.com/yonaskolb/XcodeGen.git
+  - travis_wait brew install XcodeGen    
 script:
-- cd Demo && travis_wait 1440 make
+  - pod repo update
+  - cd Demo && travis_wait 1440 make
