--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -28,7 +28,18 @@ pre_install do |installer|
 end
 
 post_install do |installer|
+  
+  `sed -i '' 's/\(^setWorkingName\)\(\)/(^setWorkingName)(void)/' ./Pods/MagicalRecord/MagicalRecord/Categories/NSManagedObjectContext/NSManagedObjectContext+MagicalRecord.m`
+  `sed -i '' 's/\(^getWorkingName\)\(\)/(^getWorkingName)(void)/' ./Pods/MagicalRecord/MagicalRecord/Categories/NSManagedObjectContext/NSManagedObjectContext+MagicalRecord.m`
+  
   installer.pods_project.build_configurations.each do |config|
     config.build_settings['SWIFT_VERSION'] = '4.2'
   end
+
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = '$(inherited)'
+    end
+  end
+
 end
